# python-ffmpegio-plugin-downloader

./: .gitmodules  CHANGELOG.md  README.rst  setup.cfg
.github/workflows/: debug.yml  test_n_pub.yml
src/ffmpegio_plugin_downloader/: __init__.py
tests/: requirements.txt  test_base.py
